--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -994,14 +994,18 @@ body.light-theme {
   }
 
   .contact__info {
-    grid-template-columns: 300px;
-    justify-content: center;
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
+    gap: 2rem;
+    margin:1rem 2rem;
+   
+}
   }
   .contact__form {
     width: 360px;
     margin: 0 auto;
   }
-}
+
 
 @media screen and (min-width: 767px) {
   .work__container {
